[project]
name = "raptor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-core>=1.35.0",
    "chunking-evaluation",
    "faiss-cpu>=1.11.0",
    "httpx==0.27.2",
    "igraph>=0.11.9",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "langchain-openai>=0.3.28",
    "nbformat>=5.10.4",
    "numpy==1.26.3",
    "openai>=1.3.3",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "pyvis>=0.3.2",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=3.0.0",
    "tenacity==8.2.3",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers==4.38.1",
    "umap-learn==0.5.5",
    "urllib3==1.26.6",
]

[tool.uv.sources]
chunking-evaluation = { git = "https://github.com/brandonstarxel/chunking_evaluation.git", rev = "d451fc4cf56e417b755994b4ca5212fd5057c0d2" }
